--- a/packages/dashboard-api/package.json
+++ b/packages/dashboard-api/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "scripts": {
     "gen": "prisma generate",
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "migrate": "prisma migrate dev"
   },
   "dependencies": {
     "@hono/node-server": "^1.4.1",
