git: update yarn-related stuff in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -40,5 +40,11 @@ Thumbs.db
 
 .nx/cache
 dev-db
-.yarn
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 cache
